# ao3fti

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  package-lock.json  package.json  postcss.config.js  rustfmt.toml  tailwind.config.js
ao3fti/: Cargo.toml
ao3fti-command-scrape/: Cargo.toml
ao3fti-command-scrape/src/: lib.rs  query.rs  utils.rs
ao3fti-command-serve/: Cargo.toml
ao3fti-command-serve/src/: lib.rs
ao3fti-command-serve/templates/: index.html  search.html
ao3fti-common/: Cargo.toml
ao3fti-common/src/: lib.rs  models.rs  timer.rs  utils.rs
ao3fti-indexer/: Cargo.toml
ao3fti-indexer/src/: lib.rs
ao3fti-queries/: .env  Cargo.toml
ao3fti-queries/migrations/: 20211203184024_create-table_authors.sql  20211203184051_create-table_origins.sql  20211203184105_create-table_warnings.sql  20211203184109_create-table_pairings.sql  20211203184117_create-table_characters.sql  20211203184122_create-table_generals.sql  20211203184132_create-table_stories.sql  20211203185323_create-table_story-authors.sql  20211203185339_create-table_story-origins.sql  20211203185343_create-table_story-warnings.sql  20211203185347_create-table_story-pairings.sql  20211203185352_create-table_story-characters.sql  20211203185356_create-table_story-generals.sql  20220608051657_create-table_page-queue.sql
ao3fti-queries/src/: lib.rs
ao3fti/src/: main.rs  verbose.rs
assets/: dest.min.css  src.css
