[package]
name = "ao3fti-common"
version = "0.1.0"
edition = "2021"

workspace = ".."

[dependencies]
color-eyre = "0.6.1"
crossbeam-channel = "0.5"
http = "0.2"
isahc = "1.6"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tokio = "1.14"
twelf = { version = "0.7", default-features = false }
