[package]
name = "ao3fti-queries"
version = "0.1.0"
edition = "2021"

workspace = ".."

[dependencies]
ao3fti-common = { path = "../ao3fti-common" }

async-trait = "0.1"
dataloader = { version = "0.15", default-features = false, features = [ "runtime-tokio" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_plain = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate" ] }
tracing = "0.1"
